--- a/app/src/main/res/layout/fragment_mv.xml
+++ b/app/src/main/res/layout/fragment_mv.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_mv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        app:tabBackground="@color/colorPrimary"
+        app:tabTextColor="@color/gray"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabIndicatorColor="@android:color/white"
+        app:tabIndicatorHeight="@dimen/indicator_height"
+        app:tabMode="scrollable"
+        >
     </android.support.design.widget.TabLayout>
-
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_mv"
         android:layout_width="match_parent"
